Fixed Title Page. Aligned Title

--- a/index.css
+++ b/index.css
@@ -21,10 +21,12 @@
 
 .space {
   background-image: url(https://media.wired.com/photos/5a593a7ff11e325008172bc2/master/pass/pulsar-831502910.jpg);
-  background-position: center;
+  background-position: fixed;
   background-repeat: no-repeat;
   background-size: cover;
+  max-height: 500px;
 }
+
 .space2 {
   background-image: url(http://cdn.spacetelescope.org/archives/images/screen/heic1808a.jpg);
   background-position: center;
@@ -50,14 +52,15 @@
 .topNav {
   list-style: none;
   margin: 0;
-  padding:0;
+  padding: 0;
   overflow: hidden;
-  position: -webkit-sticky; /* Safari */
-  position: sticky;
-  top: 0;
+  top: 20;
   width: 100%;
   z-index: 1000;
+  position:fixed;
 }
+
+
 
 .navButton{
     float:left;
@@ -68,6 +71,7 @@
     text-decoration: none;
     font-family:monospace;
 }
+
 #NameButton{
     color: white;
     background-color: #008fb3;
@@ -86,16 +90,18 @@
   float: right;
 }
 
-#text {
-  padding: 35%;
-}
-
 .footer {
   bottom: 0;
   width: 100%;
 }
-
-
+.container {
+  width: 100%;
+  height: 500px;
+  max-height: 500px;
+  display:flex;
+  justify-content: center;
+  align-items: center;
+}
 div {
   display: block;
 }
@@ -112,18 +118,10 @@ body {
   margin:0;
 }
 
-/* Parallax Scrolling Effect*/
-.parallax {
-    height: 100%;
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
 strong {
   font-size: 140%;
 }
+
 
 #AboutMeBar {
   display: flex;
